--- a/src/app/top-rated-movies/top-rated-movies.page.html
+++ b/src/app/top-rated-movies/top-rated-movies.page.html
@@ -1,9 +1,15 @@
 <app-header></app-header>
-<ion-content class="ion-padding">
-  <h2>Top Rated Movies (Full View)</h2>
-  <div class="grid">
-    <div class="grid-item" *ngFor="let movie of movies" (click)="goToMovieDetail(10)">
+<ion-content [fullscreen]="true" class="ion-padding" (ionInfinite)="loadMore($event)">
+  <h2 class="section-title">Top Rated Movies</h2>
+
+  <div class="media-grid">
+    <div class="media-item" *ngFor="let movie of movies" (click)="goToMovieDetail(10)">
       <img src="assets/placeholder.png" alt="{{ movie.title }}" />
     </div>
   </div>
+
+  <ion-infinite-scroll threshold="100px" position="bottom">
+    <ion-infinite-scroll-content loadingSpinner="dots" loadingText="Loading more movies...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
