Bug fix - In full screen view header mix with status bar

--- a/src/app/discover/discover.page.html
+++ b/src/app/discover/discover.page.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<ion-content [fullscreen]="true" class="ion-padding">
+<ion-content class="ion-padding">
   <div class="section-header">
     <h2>Top Rated Movies</h2>
     <ion-button fill="clear" (click)="goToAllMovies()">all</ion-button>
