--- a/src/app/movie/movie.page.html
+++ b/src/app/movie/movie.page.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<ion-content [fullscreen]="true" class="ion-padding">
+<ion-content class="ion-padding">
   <ion-segment [(ngModel)]="segment">
     <ion-segment-button value="watchlist">
       <ion-icon name="bookmark"></ion-icon>
