--- a/src/app/search/search.page.scss
+++ b/src/app/search/search.page.scss
@@ -39,7 +39,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    margin-top: 1rem;
+    margin: 1rem;
 
     .grid-item {
         width: calc(25% - 0.75rem);
