--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,12 +1,12 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="movie" href="/tabs/movie">
-      <ion-icon md="film-outline" aria-label="Movies"></ion-icon>
+      <ion-icon md="film-sharp" aria-label="Movies"></ion-icon>
       <ion-label class="tabs-label">Movies</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tv" href="/tabs/tv">
-      <ion-icon md="tv-outline" aria-label="TV"></ion-icon>
+      <ion-icon md="tv-sharp" aria-label="TV"></ion-icon>
       <ion-label class="tabs-label">TV</ion-label>
     </ion-tab-button>
 
