--- a/src/app/bollywood-trending/bollywood-trending.page.scss
+++ b/src/app/bollywood-trending/bollywood-trending.page.scss
@@ -1,12 +1,12 @@
 @media (prefers-color-scheme: dark) {
     .custom-blur-header {
-        background: rgba(0, 0, 0, 0.5) !important;        
+        background: rgba(0, 0, 0, 0.5) !important;
     }
 }
 
 @media (prefers-color-scheme: light) {
     .custom-blur-header {
-        background: rgba(255, 255, 255, 0.5) !important;        
+        background: rgba(255, 255, 255, 0.5) !important;
     }
 }
 
@@ -16,6 +16,10 @@
 
     ion-toolbar {
         --background: transparent;
+    }
+
+    ion-title {
+        --color: var(--ion-color-primary);
     }
 }
 
@@ -34,7 +38,6 @@
 .movie-banner {
     position: relative;
     height: 240px;
-    border-radius: 8px;
     overflow: hidden;
     cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
