--- a/src/app/discover/discover.page.html
+++ b/src/app/discover/discover.page.html
@@ -59,17 +59,32 @@
     <div *ngIf="segmentValue === 'bollywood'" class="animate__animated animate__fadeIn animate__fast">
       <!-- Big Banner Section -->
       <div class="section-header">
-        <h2>New</h2>
+        <h2>Upcoming</h2>
       </div>
-      <div class="big-banner-scroll">
-        <div class="big-banner-item" *ngFor="let banner of banners" (click)="navigateToDetail('movie', banner.id)">
-          <img [src]="banner.imageUrl" alt="{{ banner.title }}" />
-          <div class="banner-overlay">
-            <h2>{{ banner.title }}</h2>
-            <p>{{ banner.subtitle }}</p>
+
+      <div *ngIf="isLoading; else bannersContent">
+        <!-- Placeholders -->
+        <div class="big-banner-scroll">
+          <!-- Repeat the skeleton for as many banner items you’d like to show as placeholders -->
+          <div class="big-banner-item" *ngFor="let placeholder of [1,2,3]">
+            <ion-skeleton-text animated style="width: 280px; height: 160px; border-radius: 8px;"></ion-skeleton-text>
           </div>
         </div>
       </div>
+
+      <ng-template #bannersContent>
+        <div class="big-banner-scroll">
+          <div class="big-banner-item animate__animated animate__fadeIn animate__fast" *ngFor="let banner of banners">
+            <!-- <div class="big-banner-item" *ngFor="let banner of banners" (click)="navigateToDetail('movie', banner.id)"></div> -->
+            <img [src]="banner.imageUrl ? banner.imageUrl : 'url(assets/placeholder-backdrop.png)'" alt="{{ banner.title }}" />
+            <!-- <img [src]="banner.imageUrl" alt="{{ banner.title }}" /> -->
+            <div class="banner-overlay">
+              <h2>{{ banner.title }}</h2>
+              <p>{{ banner.subtitle  | date:'MMM d, y' }}</p>
+            </div>
+          </div>
+        </div>
+      </ng-template>
 
       <!-- Repeatable Banner Scroll Sections -->
       <div class="section-header">
