--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -22,15 +22,12 @@
   <!-- Searchbar Toolbar with Paste Button -->
   <ion-toolbar class="search-toolbar">
     <div class="search-wrapper">
-      <ion-searchbar 
-        [(ngModel)]="searchQuery" 
-        placeholder="Search here..." 
+      <ion-searchbar [(ngModel)]="searchQuery"
+        placeholder="Search here..."
         show-clear-button="always"
-        (ionInput)="search(true)"
-        (ionChange)="search(true)"
+        (ionInput)="onSearchInput($event)"
         (ionClear)="clearSearch()"
-        (keyup.enter)="search(true)"
-        >
+        (keyup.enter)="search(true)">
       </ion-searchbar>
       <button *ngIf="!searchQuery" class="paste-btn" (click)="pasteFromClipboard()">
         PASTE
@@ -42,14 +39,16 @@
 <ion-content [fullscreen]="true">
   <!-- Results -->
   <div class="grid" *ngIf="segmentValue === 'movies'">
-    <div class="grid-item animate__animated animate__fadeIn animate__fast" *ngFor="let item of movieResults">
+    <div class="grid-item animate__animated animate__fadeIn animate__fast" *ngFor="let item of movieResults"
+      (click)="openMovieDetail(item.id)">
       <img [src]="getImageUrl(item.poster_path)" (error)="onImageError($event)" />
       <p>{{ item.title }}</p>
     </div>
   </div>
 
   <div class="grid" *ngIf="segmentValue === 'tv'">
-    <div class="grid-item animate__animated animate__fadeIn animate__fast" *ngFor="let item of tvResults">
+    <div class="grid-item animate__animated animate__fadeIn animate__fast" *ngFor="let item of tvResults"
+      (click)="openTvDetail(item.id)">
       <img [src]="getImageUrl(item.poster_path)" (error)="onImageError($event)" />
       <p>{{ item.name }}</p>
     </div>
