--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,6 +1,6 @@
 :root {
     /** PRIMARY COLOR **/
-    --ion-color-primary: #E50914;
+    --ion-color-primary: rgb(229, 9, 20);
     --ion-color-primary-rgb: 229, 9, 20;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255, 255, 255;
